<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="transaction_number_format">Transaction #: %s</string>
    <string name="amount_format">Amount: €%s</string>
    <string name="date_format">Date: %s</string>
    <string name="app_title">Zappas Burger</string>
    <string name="app_name">SoftPosEcr</string>
    <string name="popular_items">Popular Items</string>
    <string name="favorite_items">Favorite Items</string>
    <string name="back_button">Back Button</string>
    <string name="share_button">Share Button</string>
    <string name="item_title_placeholder">Item Title</string>
    <string name="genre_placeholder">Genre</string>
    <string name="release_date_placeholder">Release Date</string>
    <string name="runtime_title">Runtime</string>
    <string name="unknown_runtime">Unknown runtime</string>
    <string name="description_title">Description</string>
    <string name="no_description">No description found.</string>
    <string name="cast_title">Cast</string>
    <string name="no_cast">No cast members found.</string>
    <string name="reviews_title">Reviews</string>
    <string name="similar_items_title">Similar Items</string>
    <string name="item_poster">Item Poster</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="similar_items_list">Similar Items List</string>
    <string name="item_price">Item Price</string>
    <string name="outcome_view">Outcome View</string>
</resources>

