<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_backround">


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/icon_text"
        android:clickable="false"
        android:fontFamily="sans-serif-medium"
        android:padding="7dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backArrowButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/scrollLayout">

            <ImageView
                android:id="@+id/itemPoster"
                android:layout_height="200dp"
                android:layout_width="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/loading"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/burger_double" />


            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/item_title_placeholder"
                android:textColor="@color/icon_text"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemPoster"
                tools:text="Double Cheeseburger" />

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="5"
                android:text="Description"
                android:textColor="@color/icon_text"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemTitle"
                tools:text="Two beef patties with double cheese and special sauce." />


            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/item_price"
                android:text="0.00€"
                android:textColor="@color/icon_text"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/itemDescription"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="11.99€" />

            <EditText
                android:id="@+id/itemNotes"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/edit_text_backround"
                android:fontFamily="sans-serif-medium"
                android:hint=" Notes.."
                android:textColorHint="@color/icon_text"
                android:textColor="@color/icon_text"
                android:gravity="top|start"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemPrice" />

            <TextView
                android:id="@+id/submitNotes"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text_backround"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="Submit"
                android:textColor="@color/icon_text"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/itemNotes"
                app:layout_constraintTop_toBottomOf="@id/itemNotes" />

            <TextView
                android:id="@+id/minusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/minus_red_48"
                android:layout_marginEnd="0dp"
                app:layout_constraintStart_toStartOf="@id/itemNotes"
                app:layout_constraintTop_toBottomOf="@id/itemNotes" />

            <!--            <TextView-->
            <!--                android:id="@+id/minusButton"-->
            <!--                android:layout_width="70dp"-->
            <!--                android:layout_height="70dp"-->
            <!--                android:layout_marginBottom="50dp"-->
            <!--                android:layout_marginStart="15dp"-->
            <!--                android:background="@drawable/minus_64"-->
            <!--                android:backgroundTint="@color/tomato_red"-->
            <!--                android:layout_marginEnd="0dp"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintEnd_toStartOf="@id/itemCounter"/>-->

            <TextView
                android:id="@+id/itemCounter"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="15dp"
                android:gravity="top|center"
                android:textColor="@color/icon_text"
                android:textSize="45sp"
                android:textStyle="bold"
                android:text="1"
                app:layout_constraintEnd_toStartOf="@id/plusButton"
                app:layout_constraintStart_toEndOf="@id/minusButton"
                app:layout_constraintTop_toBottomOf="@id/itemNotes" />

            <TextView
                android:id="@+id/plusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/plus_green_48"
                android:layout_marginStart="0dp"
                app:layout_constraintTop_toBottomOf="@id/itemNotes"
                app:layout_constraintStart_toEndOf="@id/itemCounter"
                app:layout_constraintEnd_toStartOf="@id/submitNotes"/>

            <!--            <TextView-->
            <!--                android:id="@+id/plusButton"-->
            <!--                android:layout_width="70dp"-->
            <!--                android:layout_height="70dp"-->
            <!--                android:layout_marginBottom="50dp"-->
            <!--                android:background="@drawable/plus_64"-->
            <!--                android:backgroundTint="@color/lettuce_green"-->
            <!--                android:layout_marginStart="8dp"-->
            <!--                app:layout_constraintStart_toEndOf="@id/itemCounter"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"/>-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

